methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:30: error: Unmatched closing brace '}' ignored here
}
^