methods.slug.SlugHunting.scala.code
def hunt() {
  while(!isOverBaggle()){
    isFacingTrail()
    if(isFacingTrail==true){
      brusDown();
      brushUp();
    }else{
      left();
    }
    }
}

def isFacingTrail():Boolean ={
    if(isFacingWall()){
      return false
    }else{
      forward();
    if(getCouleurSol()==Color.green){
      backward();
      return true
    }else{
      backward();
      return false
    }
    }
}
}